--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,12 @@
   color: #61dafb;
 }
 
+.addnewbtn{
+  color: white;
+  background-color: rgb(37, 200, 118);
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
